# aoc2019

./: Cargo.toml
benches/: benchmark.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  lib.rs  macros.rs  main.rs
