[package]
name = "aoc2019"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Radu Grosu <radu.grosu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmark"
harness = false